# poemsfromtom

./: .gitignore  .profile  Procfile  README.md  README.rst  Untitled.ipynb  context.json  daily-poem-scheduler.py  daily_poem.py  data.json  diagnostics.py  history copy.csv  history.csv  keywords.json  listserv.csv  listserv.txt  make-docs.py  poems.txt  poetry.py  poets.csv  pyproject.toml  requirements.txt  sandbox.ipynb  scheduler.py  send-poem.py  send_poem.py  test-tokens.py  test.ipynb  tester.ipynb  testserv.csv  testserv.txt  to_json.ipynb
.ipynb_checkpoints/: daily_poem-checkpoint.py  history-checkpoint.csv  poetry-checkpoint.py  scheduler-checkpoint.py  tester-checkpoint.ipynb  to_json-checkpoint.ipynb
_editors/: ashbery_editor.ipynb  auden_editor.ipynb  belloc_editor.ipynb  berry_editor.ipynb  bishop_editor.ipynb  blake_editor.ipynb  carroll_editor.ipynb  cather_editor.ipynb  chesterton_editor.ipynb  cummings_editor.ipynb  day-lewis_editor.ipynb  dylan_editor.ipynb  eliot_editor.ipynb  frost_editor.ipynb  gibran_editor.ipynb  heine_editor.ipynb  hemingway_editor.ipynb  hopkins_editor.ipynb  hugo_editor.ipynb  huxley.ipynb  kilmer_editor.ipynb  lawrence_editor.ipynb  lowell_editor.ipynb  macdonald_editor.ipynb  macneice_editor.ipynb  mccrae_editor.ipynb  merton_editor.ipynb  millay_editor.ipynb  milosz_editor.ipynb  moore_editor.ipynb  nash_editor.ipynb  noyes_editor.ipynb  owen_editor.ipynb  pushkin_editor.ipynb  rilke_editor.ipynb  rossetti_editor.ipynb  sassoon_editor.ipynb  shakespeare_editor.ipynb  shelley_editor.ipynb  tennyson_editor.ipynb  (+7 more)
(+982 files in other folders)
